--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Deploy Website
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,6 +34,6 @@ jobs:
       - name: Build Application
         run: npm run build
       - name: Deploy to S3
-        run: aws s3 sync ./build s3://${{ secrets.BUCKET_NAME }}
+        run: aws s3 sync ./build s3://davesplumbingadvice.net
       - name: Create Cloudfront Invalidation
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
